# djangocharts

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  requirements.txt  setup.cfg
pages/: views.py
polls/: admin.py  urls.py  views.py
pollster/: settings.py  urls.py  wsgi.py
results/: urls.py  views.py
templates/pages/: index.html
templates/partials/: _navbar.html
templates/polls/: index.html  indexadmin.html  results.html  vote_ok.html  voteok.html
templates/results/: index.html
