[metadata]
name = djangochart
url = https://gitlab.com/
description = A project with Django

[options]
packages = djangochart
install_requires =
   django

tests_require =
    diff-cover
    factory-boy
    pytest
    pytest-cov
    pytest-env
    pytest-factoryboy
    pytest-pylint
    pytest-vcr

[tool:pytest]

